# NetworkStudy

./: README.md
DNS/: CMakeLists.txt  GetAddrInfo.c  Practical.h
TCP_Chatting/: CMakeLists.txt  server.c  server_conf.h
TCP_Echo/: CMakeLists.txt  Practical.h  TCPClientUtility.c  TCPEchoClient.c  TCPEchoServer.c  TCPServerUtility.c  TCPv4_Echo_Server.c  TCPv6_Echo_Server.c
TCP_Vote/: CMakeLists.txt  DelimFramer.c  Framer.h  Practical.h  TCPServerUtility.c  TCPVoteClient.c  TCPVoteServer.c  VoteEncoding.h  VoteEncodingText.c  VoteProtocol.h
TCPv4_Echo/: DieWithMessage.c  Practical.h  TCPv4ServerUtility.c  TCPv4_Echo_Client.c
UDP_Echo/: AddressUtility.c  CMakeLists.txt  Practical.h  UDPEchoClient.c  UDPEchoServer.c
doc/: dns.md  socket.md  tcp.md
